Added post functionality for shooters
